adds changes for loading styles in stories

--- a/src/stories/Configure.mdx
+++ b/src/stories/Configure.mdx
@@ -8,6 +8,10 @@ import { Meta } from "@storybook/blocks";
   <p>This is a simple dropdown menu to display an array of strings and select one.</p>
 
   <p>Explore the components `DropdownMenu` and `Label` in this package in the sidebar menu</p>
+
+  <p>The DropdownMenu has two modes `Default` and `Match`</p>
+
+  <p>When a string is passed to the prop `match` then the component will only let the user select that option</p>
 </div>
 
 <style>
